src/test/deca/context/invalid/class12.deca
class A{
}

{
    A a=(A)(true);
}